--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,15 @@
     </modules>
 
     <properties>
-        <kotlin.version>1.3.11</kotlin.version>
-        <spring.version>5.1.2.RELEASE</spring.version>
+        <kotlin.version>1.3.21</kotlin.version>
+        <spring.version>5.1.4.RELEASE</spring.version>
+        <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
 
