--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,10 @@
     </modules>
 
     <properties>
+        <hibernate.version>5.2.13.Final</hibernate.version>
+        <hibernate.validator.version>6.0.7.Final</hibernate.validator.version>
         <kotlin.version>1.3.21</kotlin.version>
-        <spring.version>5.1.4.RELEASE</spring.version>
+        <spring.version>5.1.3.RELEASE</spring.version>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
     </properties>
 
