--- a/findmylingo-common/pom.xml
+++ b/findmylingo-common/pom.xml
@@ -35,13 +35,13 @@
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
-           <version>${spring.version}</version>
+           <version>${spring.security.version}</version>
        </dependency>
 
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
-           <version>${spring.version}</version>
+           <version>${spring.security.version}</version>
        </dependency>
 
         <dependency>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>3.5.1</version>
+            <version>3.6.2</version>
         </dependency>
 
         <dependency>
