--- a/conf/postgresql/pg_hba.conf
+++ b/conf/postgresql/pg_hba.conf
@@ -1,3 +1,4 @@
 # TYPE    DATABASE        USER            ADDRESS                 METHOD
   local   all             postgres                                peer
+  host    all             all             0.0.0.0/0               password
   local   all             all                                     password
