--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
                                     <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                                     <sourceDir>${project.basedir}/src/main/java</sourceDir>
                                 </sourceDirs>
+                                <compilerPlugins>
+                                    <plugin>jpa</plugin>
+                                    <plugin>spring</plugin>
+                                </compilerPlugins>
                             </configuration>
                         </execution>
                         <execution>
@@ -90,9 +94,25 @@
                                     <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                                     <sourceDir>${project.basedir}/src/test/java</sourceDir>
                                 </sourceDirs>
+                                <compilerPlugins>
+                                    <plugin>jpa</plugin>
+                                    <plugin>spring</plugin>
+                                </compilerPlugins>
                             </configuration>
                         </execution>
                     </executions>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.jetbrains.kotlin</groupId>
+                            <artifactId>kotlin-maven-noarg</artifactId>
+                            <version>${kotlin.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.jetbrains.kotlin</groupId>
+                            <artifactId>kotlin-maven-allopen</artifactId>
+                            <version>${kotlin.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
